# FIM_Monitor

./: CMakeLists.txt  Makefile  README.md
config/: integrity_monitor.conf
include/: baseline_storage.h  config_manager.h  file_scanner.h  hash_engine.h  inotify_monitor.h  integrity_analyzer.h  logger.h  models.h  report_generator.h  threat_classifier.h  utils.h
reports/: integrity_report_2026-03-09_17-34-47.csv  integrity_report_2026-03-09_17-35-20.csv  integrity_report_2026-03-09_17-36-03.csv
sample_root/etc/pam.d/: login
src/: baseline_storage.cpp  config_manager.cpp  file_scanner.cpp  hash_engine.cpp  inotify_monitor.cpp  integrity_analyzer.cpp  logger.cpp  main.cpp  report_generator.cpp  threat_classifier.cpp  utils.cpp
systemd/: integrity_monitor.service
